tests/baselines/reference/genericSpecializations1.errors.txt
tests/cases/compiler/genericSpecializations1.ts(5,7): error TS2420: Class 'IntFooBad' incorrectly implements interface 'IFoo<number>'.
  Types of property 'foo' are incompatible.
    Type '(x: string) => string' is not assignable to type '<T>(x: T) => T'.
      Types of parameters 'x' and 'x' are incompatible.
        Type 'T' is not assignable to type 'string'.
tests/cases/compiler/genericSpecializations1.ts(9,7): error TS2420: Class 'StringFoo2' incorrectly implements interface 'IFoo<string>'.
  Types of property 'foo' are incompatible.
    Type '(x: string) => string' is not assignable to type '<T>(x: T) => T'.
      Types of parameters 'x' and 'x' are incompatible.
        Type 'T' is not assignable to type 'string'.


==== tests/cases/compiler/genericSpecializations1.ts (2 errors) ====
    interface IFoo<T> {
        foo<T>(x: T): T; // no error on implementors because IFoo's T is different from foo's T
    }
    
    class IntFooBad implements IFoo<number> {
          ~~~~~~~~~
!!! error TS2420: Class 'IntFooBad' incorrectly implements interface 'IFoo<number>'.
!!! error TS2420:   Types of property 'foo' are incompatible.
!!! error TS2420:     Type '(x: string) => string' is not assignable to type '<T>(x: T) => T'.
!!! error TS2420:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2420:         Type 'T' is not assignable to type 'string'.
        foo(x: string): string { return null; }
    }
    
    class StringFoo2 implements IFoo<string> {
          ~~~~~~~~~~
!!! error TS2420: Class 'StringFoo2' incorrectly implements interface 'IFoo<string>'.
!!! error TS2420:   Types of property 'foo' are incompatible.
!!! error TS2420:     Type '(x: string) => string' is not assignable to type '<T>(x: T) => T'.
!!! error TS2420:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2420:         Type 'T' is not assignable to type 'string'.
        foo(x: string): string { return null; }
    }
    
    class StringFoo3 implements IFoo<string> {
        foo<T>(x: T): T { return null; }
    }